[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "infomap"
dynamic = ["version"]
description = "Infomap network clustering algorithm"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "GPL-3.0-or-later"
authors = [
  { name = "mapequation", email = "mapequation@gmail.com" },
]
requires-python = ">=3.11"
keywords = [
  "map equation",
  "network analysis",
  "community detection",
  "clustering algorithm",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://www.mapequation.org/infomap"
Documentation = "https://mapequation.org/infomap-python-docs/"
Repository = "https://github.com/mapequation/infomap.git"
Issues = "https://github.com/mapequation/infomap/issues"

[project.optional-dependencies]
networkx = [
  "networkx",
]
igraph = [
  "igraph",
]
pandas = [
  "pandas",
]
graphrag = [
  "numpy",
  "pandas",
  "pyarrow",
]
scipy = [
  "scipy",
]
anndata = [
  "anndata",
  "pandas",
  "scipy",
]
all = [
  "anndata",
  "igraph",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scipy",
]
test = [
  "anndata",
  "igraph",
  "jsonschema>=4.18",
  "pytest",
  "networkx",
  "pyarrow",
  "referencing",
  "ruff",
  "scipy",
]
docs = [
  "sphinx",
  "furo",
  "myst-nb",
  "sphinx-copybutton",
  "sphinxext-opengraph",
]
examples = [
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scipy",
]
notebooks = [
  "coloraide",
  "igraph",
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "nbmake",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scanpy[leiden]",
  "scipy",
  "seaborn",
  "SPARQLWrapper",
]
release = [
  "build",
  "cibuildwheel==3.3.1",
  "twine",
  "wheel",
]

[project.scripts]
infomap = "infomap:main"
infomap-shell = "infomap.shell:main"

[project.entry-points."networkx.backends"]
infomap = "infomap._nx_backend:BackendInterface"

[project.entry-points."networkx.backend_info"]
infomap = "infomap._nx_backend:get_info"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
infomap = ["py.typed"]

[tool.setuptools.package-dir]
"" = "interfaces/python/src"

[tool.setuptools.packages.find]
where = ["interfaces/python/src"]

[tool.setuptools.dynamic]
version = { attr = "infomap._version.__version__" }

[tool.ruff]
extend-exclude = [
  "interfaces/python/src/infomap/_swig.py",
]

[tool.ruff.lint.per-file-ignores]
"build/py/*.py" = [
  "F401",
  "F811",
  "E402",
  "F821",
  "F405",
]

[tool.pytest.ini_options]
testpaths = ["test/python"]
markers = [
  "fast: Stable correctness checks intended for fast feedback and nightly correctness runs.",
  "slow: Broader or more expensive checks that should stay out of the default fast suite.",
  "crash: Regression checks focused on no-crash behavior for previously brittle code paths.",
  "perf: Performance-oriented checks or benchmarks that should not gate normal correctness runs.",
]
