[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "infomap"
dynamic = ["version"]
description = "Infomap network clustering algorithm"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "GPL-3.0-or-later"
authors = [
  { name = "mapequation", email = "mapequation@gmail.com" },
]
requires-python = ">=3.11"
keywords = [
  "map equation",
  "network analysis",
  "community detection",
  "clustering algorithm",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://www.mapequation.org/infomap"
Documentation = "https://mapequation.org/infomap-python-docs/"
Repository = "https://github.com/mapequation/infomap.git"
Issues = "https://github.com/mapequation/infomap/issues"

[project.optional-dependencies]
networkx = [
  "networkx",
]
igraph = [
  "igraph",
]
pandas = [
  "pandas",
]
graphrag = [
  "numpy",
  "pandas",
  "pyarrow",
]
scipy = [
  "scipy",
]
anndata = [
  "anndata",
  "pandas",
  "scipy",
]
all = [
  "anndata",
  "igraph",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scipy",
]
test = [
  "anndata",
  "igraph",
  "jsonschema>=4.18",
  "pyright",
  "pytest",
  "networkx",
  "pyarrow",
  "referencing",
  "ruff",
  "scipy",
]
docs = [
  "sphinx",
  "furo",
  "myst-nb",
  "sphinx-copybutton",
  "sphinxext-opengraph",
]
examples = [
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scanpy[leiden]",
  "scipy",
]
notebooks = [
  "coloraide",
  "igraph",
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "nbmake",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scanpy[leiden]",
  "scipy",
  "seaborn",
  "SPARQLWrapper",
]
release = [
  "build",
  "cibuildwheel==3.3.1",
  "twine",
  "wheel",
]

[project.scripts]
infomap = "infomap:main"
infomap-shell = "infomap.shell:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
infomap = ["py.typed"]

[tool.setuptools.package-dir]
"" = "interfaces/python/src"

[tool.setuptools.packages.find]
where = ["interfaces/python/src"]

[tool.setuptools.dynamic]
version = { attr = "infomap._version.__version__" }

[tool.ruff]
extend-exclude = [
  "interfaces/python/src/infomap/_swig.py",
]

[tool.ruff.lint.per-file-ignores]
"build/py/*.py" = [
  "F401",
  "F811",
  "E402",
  "F821",
  "F405",
]

[tool.pyright]
# Type-check the hand-written package only. The SWIG-generated _swig.py is
# excluded (same boundary as ruff's extend-exclude); its ~50 generated-binding
# diagnostics are noise. Symbols it exports are still resolved for importers
# because pyright parses excluded files it sees imported -- it just won't report
# diagnostics inside them.
include = ["interfaces/python/src/infomap"]
exclude = [
  "interfaces/python/src/infomap/_swig.py",
  "**/__pycache__",
  "**/.venv",
  "build",
  "dist",
]
# Check against the lowest supported runtime so we don't lean on newer-version
# syntax. The package declares requires-python >= 3.11.
pythonVersion = "3.11"
typeCheckingMode = "standard"
# Optional scientific deps (numpy, pandas, torch, ...) often ship without type
# stubs; don't nag about that -- it isn't our code's problem.
reportMissingModuleSource = false
# __all__ is built dynamically in the re-export modules (__init__/_bindings)
# because they forward the generated/SWIG-wrapped surface via globals() and
# _facade.__all__. That is intentional, not a bug to statically inline.
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
testpaths = ["test/python"]
markers = [
  "fast: Stable correctness checks intended for fast feedback and nightly correctness runs.",
  "slow: Broader or more expensive checks that should stay out of the default fast suite.",
  "crash: Regression checks focused on no-crash behavior for previously brittle code paths.",
  "perf: Performance-oriented checks or benchmarks that should not gate normal correctness runs.",
]
