[build-system]
requires = [
  # >=77 for PEP 639 SPDX license support (the `license` expression below).
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "infomap"
dynamic = ["version"]
description = "Infomap network clustering algorithm"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "GPL-3.0-or-later"
authors = [
  { name = "mapequation", email = "mapequation@gmail.com" },
]
requires-python = ">=3.11"
keywords = [
  "map equation",
  "network analysis",
  "community detection",
  "clustering algorithm",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://www.mapequation.org/infomap"
Documentation = "https://mapequation.org/infomap-python-docs/"
Repository = "https://github.com/mapequation/infomap.git"
Issues = "https://github.com/mapequation/infomap/issues"

[project.optional-dependencies]
networkx = [
  "networkx",
]
igraph = [
  "igraph",
]
pandas = [
  "pandas",
]
graphrag = [
  "numpy",
  "pandas",
  "pyarrow",
]
scipy = [
  "scipy",
]
anndata = [
  "anndata",
  "pandas",
  "scipy",
]
all = [
  "anndata",
  "igraph",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scipy",
]
test = [
  "anndata",
  "igraph",
  "jsonschema>=4.18",
  "pre-commit",
  # Pinned: pyright gates CI (test-python-typecheck-core), and new pyright
  # releases routinely add diagnostics. Bump deliberately.
  "pyright==1.1.411",
  "pytest",
  "networkx",
  "pyarrow",
  "referencing",
  "ruff",
  "scipy",
]
docs = [
  # Building the docs executes the chapter code cells via myst-nb, so a full
  # build also needs the `examples` extra (matplotlib, networkx, igraph, pandas,
  # scikit-learn, scanpy, ...). Use `pip install -e ".[docs,examples]"`, which is
  # what `make build-docs` installs.
  "sphinx",
  "furo",
  "myst-nb",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-reredirects",
  "sphinx-togglebutton",
  "sphinxcontrib-bibtex",
  "sphinxext-opengraph",
]
examples = [
  "igraph",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scanpy[leiden]",
  "scipy",
]
notebooks = [
  "coloraide",
  "igraph",
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "nbmake",
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scanpy[leiden]",
  "scipy",
  "seaborn",
  "SPARQLWrapper",
]
release = [
  "build",
  "cibuildwheel==4.1.0",
  "twine",
  "wheel",
]

[project.scripts]
infomap = "infomap:main"
infomap-shell = "infomap.shell:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
infomap = ["py.typed", "datasets/data/*.net"]

[tool.setuptools.package-dir]
"" = "interfaces/python/src"

[tool.setuptools.packages.find]
where = ["interfaces/python/src"]

[tool.setuptools.dynamic]
version = { attr = "infomap._version.__version__" }

[tool.ruff]
extend-exclude = [
  # Generated files: the generator owns their formatting and a freshness gate
  # is their check, so ruff must not rewrite them (it would diverge them from
  # the generator output). _swig.py is SWIG output; _options.py is generated by
  # scripts/generate_binding_options.py.
  "interfaces/python/src/infomap/_swig.py",
  "interfaces/python/src/infomap/_options.py",
]

[tool.ruff.lint]
# flake8-bugbear (B) on top of the default E/F rules: likely-bug patterns.
# The main one here is B905 -- zip() without strict= -- fixed by asserting the
# equal-length invariant (strict=True) on the paired-array call sites.
# pyupgrade (UP): modernize syntax to the >=3.11 floor (PEP 585/604
# annotations, etc.). isort (I): keep imports sorted and grouped.
extend-select = ["B", "UP", "I"]

[tool.ruff.lint.per-file-ignores]
"build/py/*.py" = [
  "F401",
  "F811",
  "E402",
  "F821",
  "F405",
]
# Tests access a property/attribute purely to trigger its side effect (a
# deprecation warning, a boundary check), which B018 flags as a useless
# expression. That access is the point of the test, so ignore B018 there.
"test/python/*" = ["B018"]

[tool.pyright]
# Type-check the hand-written package only. The SWIG-generated _swig.py is
# excluded (same boundary as ruff's extend-exclude); its ~50 generated-binding
# diagnostics are noise. Symbols it exports are still resolved for importers
# because pyright parses excluded files it sees imported -- it just won't report
# diagnostics inside them.
include = ["interfaces/python/src/infomap"]
exclude = [
  "interfaces/python/src/infomap/_swig.py",
  "**/__pycache__",
  "**/.venv",
  "build",
  "dist",
]
# Check against the lowest supported runtime so we don't lean on newer-version
# syntax. The package declares requires-python >= 3.11.
pythonVersion = "3.11"
typeCheckingMode = "standard"
# Optional scientific deps (numpy, pandas, torch, ...) often ship without type
# stubs; don't nag about that -- it isn't our code's problem.
reportMissingModuleSource = false
# __all__ is built dynamically in the re-export modules (__init__/_bindings)
# because they forward the generated/SWIG-wrapped surface via globals() and
# _facade.__all__. That is intentional, not a bug to statically inline.
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
minversion = "7"
# -ra: summarize skips/xfails at the end. --strict-markers: an unregistered
# marker (e.g. a typo of the custom ones below) is an error, not a silent skip.
# --strict-config: a typo in this section is an error rather than ignored.
addopts = ["-ra", "--strict-markers", "--strict-config"]
# A test marked xfail that unexpectedly passes is a failure, not a silent pass:
# it means the reason for the xfail is gone and the marker should be removed.
xfail_strict = true
# Turn unexpected warnings into failures. The package deliberately exercises its
# own deprecated 2.x surface across the suite as part of the 3.0 migration, so
# its own Deprecation/PendingDeprecationWarning churn is tolerated; every other
# warning category (unhandled UserWarning, RuntimeWarning, FutureWarning, ...)
# now fails the run instead of scrolling past. Tests that assert a specific
# deprecation still do so via pytest.warns / pytest.deprecated_call.
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
testpaths = ["test/python"]
# NUMBER lets doctests state floats at the precision that matters
# (`>>> result.codelength` -> `3.3858`) instead of an abs(...) < tol dance.
doctest_optionflags = ["NUMBER"]
markers = [
  "fast: Stable correctness checks intended for fast feedback and nightly correctness runs.",
  "slow: Broader or more expensive checks that should stay out of the default fast suite.",
  "crash: Regression checks focused on no-crash behavior for previously brittle code paths.",
  "perf: Performance-oriented checks or benchmarks that should not gate normal correctness runs.",
]
